# Project

./: .gitignore  Main.cpp  Matrix.cpp  Matrix.h
OrcWars/data/: fonts.xml  res.xml  script.sh
OrcWars/data/fonts/: font.fnt
OrcWars/data/maps/: map1.txt  map2.txt  map3.txt
OrcWars/proj.cmake/: CMakeCache.txt  CMakeLists.txt  EmptyOxygine  Makefile  Snake.cbp  ViewHelper.cpp  cmake_install.cmake  example.cpp  main.cpp
OrcWars/proj.cmake/Model/: CMakeCache.txt  CMakeLists.txt  Main.cpp  Makefile  Matrix.cpp  Model.cbp  Snake.h  cmake_install.cmake
OrcWars/proj.cmake/Model-build/: CMakeCache.txt  Makefile  Matrix  Model.cbp  cmake_install.cmake
OrcWars/proj.cmake/oxygine-framework/: Makefile  OXYGINE.cbp  cmake_install.cmake
OrcWars/src/: CMakeLists.txt  ViewHelper.cpp  ViewHelper.h  example.cpp  main.cpp
OrcWars/src/AI/: AI.cpp  AI.h
OrcWars/src/Events/: Events.cpp  Events.h
OrcWars/src/Menu/: Menu.cpp  Menu.h
OrcWars/src/Model/: CMakeLists.txt  Graph.cpp  Graph.h  Matrix  Matrix.cpp  Matrix.h  Node.cpp  Node.h  Snake.cpp  Snake.h  Tests.cpp  graph.cpp  graph.h  node.cpp  node.h
OrcWars/src/Presenter/: Game_presenter.cpp  Game_presenter.h
OrcWars/src/View/: Game_view.cpp  Game_view.h
SDL/: Android.mk  CMakeLists.txt  OWMakefile.os2  configure  configure.in
SDL/src/atomic/: SDL_atomic.c  SDL_spinlock.c
SDL/src/audio/: SDL_audiotypecvt.c  SDL_sysaudio.h
SDL/src/cpuinfo/: SDL_cpuinfo.c
SDL/src/dynapi/: SDL_dynapi.c  SDL_dynapi_overrides.h  SDL_dynapi_procs.h
SDL/src/events/: SDL_events.c  SDL_mouse.c  SDL_windowevents.c
SDL/src/haptic/: SDL_haptic.c
SDL/src/joystick/: SDL_gamecontroller.c  SDL_joystick.c  SDL_sysjoystick.h  controller_type.h
SDL/src/power/: SDL_syspower.h
SDL/src/sensor/: SDL_sensor.c
SDL/src/stdlib/: SDL_string.c
SDL/src/thread/: SDL_thread.c
SDL/src/video/: SDL_blit.h  SDL_blit_N.c  SDL_egl.c  SDL_egl_c.h  SDL_surface.c  SDL_yuv.c
oxygine-flow/: .gitignore  README.md
oxygine-flow/src/: oxygine-flow.h
oxygine-flow/src/flow/: Scene.cpp  Scene.h  Transition.cpp  Transition.h  flow.cpp  flow.h
oxygine-framework/: .gitignore  Android.mk  CMakeLists.txt  readme.md
oxygine-framework/examples/Demo/: build_atlasses_etc2.bat
oxygine-framework/oxygine/src/: oxygine-framework.h  oxygine-include.h
oxygine-framework/oxygine/system_data/: build.py
oxygine-framework/oxygine/system_data_demo/: build.py
oxygine-framework/readme/: Android.txt  VisualStudio.txt  emscripten.txt  readme.txt
oxygine-framework/tools/: gen_template.py  oxyresbuild.py
oxygine-framework/tools/others/: build_oxygine_with_sdl.py  format.bat  gen_includes.py  gen_templates.py  genfn.py  sort_includes.py  update_examples_entry.py
oxygine-framework/tools/resbuild/: atlas.py  oxygine_helper.py  process_atlas.py  process_font.py
oxygine-freetype/: .gitignore  Android.mk  CMakeLists.txt  README.md
oxygine-freetype/proj.ios/: buildft.sh
oxygine-freetype/src/: ResFontFT.cpp  ResFontFT.h
oxygine-sound/: .gitignore  Android.mk  CMakeLists.txt  README.md
oxygine-sound/proj.ios/oxygine-sound.xcodeproj/: project.pbxproj
oxygine-sound/proj.macosx/oxygine-sound.xcodeproj/: project.pbxproj
oxygine-sound/proj.win32/: oxygine-sound.vcxproj  oxygine-sound.vcxproj.filters
oxygine-sound/src/: oxygine-sound.h
oxygine-sound/src/sound/: MemoryStream.cpp  MemoryStream.h  OggStream.cpp  OggStream.h  ResSound.cpp  ResSound.h  Sound.h  SoundHandle.cpp  SoundHandle.h  SoundInstance.cpp  SoundInstance.h  (+7 more)
(+537 files in other folders)
